[package]
name = "remove-box-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
shuttle-actix-web = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = "1.26.0"
