[package]
name = "remove-box-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
shuttle-actix-web = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = "1.26.0"
shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["chrono"] }
ring = "0.17.8"
futures = "0.3.30"
futures-util = "0.3.30"
sig = { path="../sig" }
