[package]
name = "remove-box-fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.21", features = ["csr"] }
implicit-clone = "0.4.9"
yew-autoprops = "0.4.1"
rand = "0.8.5"
web-sys = "0.3.67"
gloo-timers = "0.3"
gloo-console = "0.3"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen-futures = "0.4.41"
once_cell = "1.19"
ring = { version="0.17.8", features = ["wasm32_unknown_unknown_js"] }
sig = { path="../sig" }
