[package]
name = "sig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = { version="0.17.8", features = ["wasm32_unknown_unknown_js"] }
serde ="1.0"
serde_json = "1.0"
#[cfg(target_arch = "wasm32")]
js-sys = "0.3.68"
